@@ -1,3 +1,10 @@
+2001-10-18  Mikael Djurfeldt  <mdj@linnaeus>
+
+	* lib.scm: Move module the system directives `export',
+	  `export-syntax', `re-export' and `re-export-syntax' into the
+	  `define-module' form.  This is the recommended way of exporting
+	  bindings.
+
 2001-09-21  Rob Browning  <rlb@defaultvalue.org>
 
 	* tests/numbers.test (fixnum-bit): compute dynamically.
